--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="taiwo.css" />
+    <link rel="stylesheet" href="styleheet/style.css" />
+    <link rel="stylesheet" href="styleheet/css-reset.css" />
+    <link rel="stylesheet" href="styleheet/grid.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://g1.nyt.com/fonts/css/web-fonts.5810def60210a2fa7d0848f37e3fa048bb6147b1.css" />
     <script src="https://use.fontawesome.com/93b7dd2125.js"></script>
@@ -14,7 +16,7 @@
     <header class="bg-gray-">
       <nav class="flex head">
         <a href="#" class="logo">
-          <img src="./assets/logo-on-dark.svg" alt="Logo" />
+          <img src="images/logo-on-dark.svg" alt="Logo" />
         </a>
 
         <div class="nav-bar">
@@ -59,6 +61,55 @@
         </div>
       </section>
     </header>
+    <main>
+      <section class="grid">
+        <div class="main-content">
+          <img src="images/searchlogo.svg" alt="search" />
+          <h2>1. Search</h2>
+          <p class="para">
+            We have a total of 26,230 Property & Houses for rent in Lagos updated on 13 Dec 2020 . Among these properties are houses, lands, shops, apartments, flats and commercial spaces in Lagos.
+            Every Real Estate in Nigeria posted on this site is verified by real estate agents in Lagos. We also have cheap houses for rent in Lagos and cheap houses for sale in Lagos. Refine your
+            property search in Lagos by price, number of beds and type of property
+          </p>
+        </div>
+        <div class="main-content">
+          <img src="images/location.svg" alt="locate" />
+          <h2>2. Locate</h2>
+          <p class="para">
+            We have a total of 26,230 Property & Houses for rent in Lagos updated on 13 Dec 2020 . Among these properties are houses, lands, shops, apartments, flats and commercial spaces in Lagos.
+            Every Real Estate in Nigeria posted on this site is verified by real estate agents in Lagos. We also have cheap houses for rent in Lagos and cheap houses for sale in Lagos. Refine your
+            property search in Lagos by price, number of beds and type of property
+          </p>
+        </div>
+        <div class="main-content">
+          <img src="images/apply.svg" alt="apply" />
+          <h2>1. Apply</h2>
+          <p class="para">
+            We have a total of 26,230 Property & Houses for rent in Lagos updated on 13 Dec 2020 . Among these properties are houses, lands, shops, apartments, flats and commercial spaces in Lagos.
+            Every Real Estate in Nigeria posted on this site is verified by real estate agents in Lagos. We also have cheap houses for rent in Lagos and cheap houses for sale in Lagos. Refine your
+            property search in Lagos by price, number of beds and type of property
+          </p>
+        </div>
+        <div class="main-content">
+          <img src="images/rest.svg" alt="reset" />
+          <h2>1. Rest</h2>
+          <p class="para">
+            We have a total of 26,230 Property & Houses for rent in Lagos updated on 13 Dec 2020 . Among these properties are houses, lands, shops, apartments, flats and commercial spaces in Lagos.
+            Every Real Estate in Nigeria posted on this site is verified by real estate agents in Lagos. We also have cheap houses for rent in Lagos and cheap houses for sale in Lagos. Refine your
+            property search in Lagos by price, number of beds and type of property
+          </p>
+        </div>
+      </section>
+      <section class="house">
+        <div class="house-info1">
+          <div class="info-line">
+            <p>We have a total of 26,230 Property & Houses for rent in Lagos updated</p>
+            <button type="button" class="find">find a house</button>
+          </div>
+          <img src="images/location.jpg" alt="cat" />
+        </div>
+      </section>
+    </main>
     <!-- hero -->
 
     <!-- <section class="s">
