first page Done

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </select>
             </div> -->
 
-            <p class="note">Search by kEYWORDS</p>
+            <p class="key">Search by kEYWORDS</p>
             <div class="md-flex">
               <input type="text" placeholder="Search location..." class="form-input" />
 
@@ -129,12 +129,13 @@
         <li><a href="#">Search</a></li>
         <li><a href="#">About us</a></li>
         <li><a href="#">Advertise</a></li>
-        <li><a href="#" class="not">Facebook</a></li>
-        <li><a href="#" class="not">Twitter</a></li>
-        <li><a href="#" class="not">Blog</a></li>
-        <li><a href="#" class="not">Google</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Google</a></li>
       </ul>
-      <li><a href="#">img</a></li>
+      <a href="#"><img src="images/sign.svg" alt="wali" class="ign" /></a>
+
       <div class="md-level">
         <div class="contacts">
           <form class="subscribe">
