--- a/search.html
+++ b/search.html
@@ -40,7 +40,7 @@
           <div>
             <p class="note">Buying and selling couldn't be simpler than this.</p>
           </div>
-          <form action="" class="form">
+          <form action="#" class="form">
             <p class="key">Search by kEYWORDS</p>
             <div class="md-fle">
               <div class="f">
