--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@
     <header class="bg-gray">
       <nav class="flex head">
         <a href="#" class="logo">
-          <img src="images/logo-on-dark.svg" alt="Logo" />
+          <img src="https://images.nigeriapropertycentre.com/property-centre-logo.png" alt="Nigeria Property Centre" />
         </a>
 
         <div class="nav-bar">
@@ -272,20 +272,27 @@
         </div>
       </section>
     </main>
+
     <footer class="footer">
-      <ul class="foot">
+      <div class="foot3 foot8">
+   <div class="foot">
+      <ul class="foot foot6">
         <li><a href="#">Home</a></li>
         <li><a href="#">Search</a></li>
         <li><a href="#">About us</a></li>
         <li><a href="#">Advertise</a></li>
+      </ul></div>
+      <div>
+      <a href="#"><img src="images/real2.png" alt="wali" class="ign" /></a></div>
+      <div class="foot">
+     <ul class="foot foot5">
         <li><a href="#">Facebook</a></li>
         <li><a href="#">Twitter</a></li>
         <li><a href="#">Blog</a></li>
         <li><a href="#">Google</a></li>
-      </ul>
-      <a href="#"><img src="images/sign.svg" alt="wali" class="ign" /></a>
-
-      <div class="md-level">
+      </ul></div>
+      </div>
+      <div class="md-level foot3">
         <div class="contacts">
           <form class="subscribe">
             <label for="email">
@@ -299,7 +306,7 @@
             <p>+2348169258615</p>
             adetonat@ymail.com
           </div>
-
+        </div>
         <div class="about">
           About us
           <p>I am a graduate of university</p>
