--- a/detail.html
+++ b/detail.html
@@ -16,7 +16,7 @@
     <header class="bg-gray">
       <nav class="flex head">
         <a href="#" class="logo">
-          <img src="images/logo-on-dark.svg" alt="Logo" />
+          <img src="https://images.nigeriapropertycentre.com/property-centre-logo.png" alt="Nigeria Property Centre" />
         </a>
 
         <div class="nav-bar">
@@ -82,8 +82,8 @@
             <div class="price price-list">
               <p class="for">Type</p>
               <p class="for">State</p>
-              <p><span class=""> Amount : ₦ 1,300,000</span></p>
-              <p>Location</p>
+              <p><span class=""> Amount : <span class="blue">₦ 1,300,000</span></span></p>
+              <p>Location :<span class="blue">Abuja</span></p>
             </div>
             <div class="price">
               <p class="for">DICOUNT: <span class="blue">10%</span></p>
@@ -129,20 +129,26 @@
 
     </main>
 
-    <!-- <footer>
-      <ul class="foot">
+    <footer>
+      <div class="foot3 foot8">
+   <div class="foot">
+      <ul class="foot foot6">
         <li><a href="#">Home</a></li>
         <li><a href="#">Search</a></li>
         <li><a href="#">About us</a></li>
         <li><a href="#">Advertise</a></li>
+      </ul></div>
+      <div>
+      <a href="#"><img src="images/real2.png" alt="wali" class="ign" /></a></div>
+      <div class="foot">
+     <ul class="foot foot5">
         <li><a href="#">Facebook</a></li>
         <li><a href="#">Twitter</a></li>
         <li><a href="#">Blog</a></li>
         <li><a href="#">Google</a></li>
-      </ul>
-      <a href="#"><img src="images/sign.svg" alt="wali" class="ign" /></a>
-
-      <div class="md-level">
+      </ul></div>
+      </div>
+      <div class="md-level foot3">
         <div class="contacts">
           <form class="subscribe">
             <label for="email">
@@ -162,6 +168,6 @@
           <p>I am a graduate of university</p>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
