--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="bg-gray-">
       <nav class="flex head">
         <a href="#" class="logo">
-          <img src="images/logo-on-dark.svg" alt="Logo" />
+          <img src="https://images.nigeriapropertycentre.com/property-centre-logo.png" alt="Nigeria Property Centre" />
         </a>
 
         <div class="nav-bar">
@@ -123,7 +123,7 @@
         </aside>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <ul class="foot">
         <li><a href="#">Home</a></li>
         <li><a href="#">Search</a></li>
@@ -134,7 +134,7 @@
         <li><a href="#">Blog</a></li>
         <li><a href="#">Google</a></li>
       </ul>
-      <a href="#"><img src="images/sign.svg" alt="wali" class="ign" /></a>
+      <a href="#"><img src="images/real2.png" alt="wali" class="ign" /></a>
 
       <div class="md-level">
         <div class="contacts">
