--- a/detail.html
+++ b/detail.html
@@ -46,19 +46,19 @@
           /></label>
         </div>
         <div class="bio">
-          <label for="email"> Email <br /><input type="email" name="first" id="email" placeholder="Email" /></label>
+          <label for="email"> Email <br /> <input type="email" name="first" id="email" placeholder="Email" /></label>
         </div>
         <div class="bio">
-          <label for="name"> UserName* <br /><input type="text" name="user" id="name" placeholder="UserName" /></label>
+          <label for="user"> UserName* <br /><input type="text" name="user" id="user" placeholder="UserName" /></label>
         </div>
         <div class="bio">
-          <label for="name"> UserName* <br /><input type="text" name="first" id="name" placeholder="Username" /></label>
+          <label for="user"> UserName* <br /><input type="text" name="first" id="user" placeholder="Username" /></label>
         </div>
         <div class="bio">
-          <label for="name"> Password <br /><input type="password" name="first" id="name" placeholder="Passowrd" /></label>
+          <label for="password"> Password <br /><input type="password" name="first" id="password" placeholder="Passowrd" /></label>
         </div>
         <div class="bio">
-          <label for="name"> Confirm Password <br /><input type="password" name="first" id="name" placeholder="Confirm password" /></label>
+          <label for="Confirm"> Confirm Password <br /><input type="password" name="first" id="Confirm" placeholder="Confirm password" /></label>
         </div>
         <div class="sign">
           <button type="button" class="signup">signup</button>
@@ -92,16 +92,16 @@
                 <span class=""> Email:<span class="blue">adea@gamil.com</span> </span>
               </p>
 
-            <p>Gender: <span class="blue">FEMALE</span</p>
+            <p>Gender: <span class="blue">FEMALE</span></p>
             </div>
-          </div>
-          <button type="button"class="sub">Apply</button>
+
+          <button type="button" class="sub">Apply</button>
           <div class="space">
             <ul class="space1">
               <li><span><a href="#"><i class="fas fa-bed blue" aria-hidden="true"></i></a>3 Bedrooms</li>
-              <li><span><a href="#"><i class="fas fa-bath blue" aria-hidden="true"></i></a></span></i>&nbsp; 4 Bathrooms</li>
+              <li><span><a href="#"><i class="fas fa-bath blue" aria-hidden="true"></i></a></span>&nbsp; 4 Bathrooms</li>
               <li><span><a href="#"><i class="fas fa-toilet blue" aria-hidden="true"></i></a></span></i>&nbsp;4 Toilets</li>
-              <li><span><a href="#"><i class="fas fa-car-side blue" aria-hidden="true"></i></a></span></i>&nbsp;9 Parking Spaces</li>
+              <li><span><a href="#"><i class="fas fa-car-side blue" aria-hidden="true"></i></a></span>&nbsp;9 Parking Spaces</li>
             </ul>
           </div>
         </div>
@@ -155,7 +155,7 @@
               <span>Subscibe:</span> <br />
               <input type="email" name="email" id="email" class="send" required placeholder="your Email" /> </label
             ><br />
-            <input type="submit" name="" id="submit" value="send" class="send" />
+            <input type="submit"  id="submit" value="send" class="send" />
           </form>
           <div class="about">
             contact
