--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
           <a href="#"> <i class="fas fa-rss ml-3" aria-hidden="true"></i> <span class="none">Blog</span> </a>
           <input type="checkbox" id="toggle" class="header__toggle" />
 
-          <label for="toggle" class="header__burger ml-3">
+          <div for="toggle" class="header__burger ml-3">
             <div class="header__burger-bar"></div>
             <div class="header__burger-bar"></div>
             <div class="header__burger-bar"></div>
-          </label>
+          </div>
           <span class="none">More</span>
         </div>
       </nav>
@@ -38,7 +38,7 @@
           <div>
             <p class="note">Buying and selling couldn't be simpler than this.</p>
           </div>
-          <form action="" class="form">
+          <form action="#" class="form">
             <!-- <div class="f">
               <select class="">
                 <option>House</option>
@@ -143,7 +143,7 @@
               <span>Subscibe:</span> <br />
               <input type="email" name="email" id="email" class="send" required placeholder="your Email" /> </label
             ><br />
-            <input type="submit" name="" id="submit" value="send" class="send" />
+            <input type="submit" id="submit" value="send" class="send" />
           </form>
           <div class="about">
             contact
