--- a/search.html
+++ b/search.html
@@ -25,74 +25,70 @@
           <a href="#"> <i class="fas fa-rss ml-3" aria-hidden="true"></i> <span class="none">Blog</span> </a>
           <input type="checkbox" id="toggle" class="header__toggle" />
 
-          <label for="toggle" class="header__burger ml-3">
+          <div for="toggle" class="header__burger ml-3">
             <div class="header__burger-bar"></div>
             <div class="header__burger-bar"></div>
             <div class="header__burger-bar"></div>
-          </label>
+          </div>
           <span class="none">More</span>
         </div>
       </nav>
     </header>
     <main>
       <section class="rent">
-        <div class="">
-          <div>
-            <p class="note">Buying and selling couldn't be simpler than this.</p>
-          </div>
-          <form action="#" class="form">
-            <p class="key">Search by kEYWORDS</p>
-            <div class="md-fle">
-              <div class="f">
-                <h3 class="type">TYPES:</h3>
-                <select class="select">
-                  <option>House</option>
-                  <option selected>Apartment</option>
-                  <option>Loft house</option>
-                  <option>Town house</option>
-                </select>
-              </div>
-              <div class="f">
-                <h3 class="type">BEDROOMS:</h3>
-                <select class="select">
-                  <option>House</option>
-                  <option selected>Apartment</option>
-                  <option>Loft house</option>
-                  <option>Town house</option>
-                </select>
-              </div>
-              <div>
-                <h3 class="type">MIN PRICE:</h3>
-                <select class="select">
-                  <option>House</option>
-                  <option selected>Apartment</option>
-                  <option>Loft house</option>
-                  <option>Town house</option>
-                </select>
-              </div>
-              <div>
-                <h3 class="type">MAX PRICE:</h3>
-                <select class="select">
-                  <option>House</option>
-                  <option selected>Apartment</option>
-                  <option>Loft house</option>
-                  <option>Town house</option>
-                </select>
-              </div>
+        <div>
+          <p class="note">Buying and selling couldn't be simpler than this.</p>
+        </div>
+        <form action="#" class="form">
+          <p class="key">Search by kEYWORDS</p>
+          <div class="md-fle">
+            <div class="f">
+              <h3 class="type">TYPES:</h3>
+              <select class="select">
+                <option>House</option>
+                <option selected>Apartment</option>
+                <option>Loft house</option>
+                <option>Town house</option>
+              </select>
+            </div>
+            <div class="f">
+              <h3 class="type">BEDROOMS:</h3>
+              <select class="select">
+                <option>House</option>
+                <option selected>Apartment</option>
+                <option>Loft house</option>
+                <option>Town house</option>
+              </select>
+            </div>
+            <div>
+              <h3 class="type">MIN PRICE:</h3>
+              <select class="select">
+                <option>House</option>
+                <option selected>Apartment</option>
+                <option>Loft house</option>
+                <option>Town house</option>
+              </select>
+            </div>
+            <div>
+              <h3 class="type">MAX PRICE:</h3>
+              <select class="select">
+                <option>House</option>
+                <option selected>Apartment</option>
+                <option>Loft house</option>
+                <option>Town house</option>
+              </select>
+            </div>
 
-              <!-- <input type="text" placeholder="Search location..." class="form-in select" /><br /> -->
-<div class="btn">
-              <button type="submit" class="type btn- ">Search</button>
-              <button type="submit" class="type btn_ ">clear filter</button></div>
+            <div class="btn">
+              <button type="submit" class="type btn-">Search</button>
+              <button type="submit" class="type btn_">clear filter</button>
             </div>
-            </div>
-          </form>
-          <div>
-            <p class="article">Search Results Found 4 Houses</p>
           </div>
+        </form>
+        <div>
+          <p class="article">Search Results Found 4 Houses</p>
         </div>
       </section>
-
 
       <section class="lekki-grid">
         <div class="lekki-house">
@@ -275,22 +271,25 @@
 
     <footer class="footer">
       <div class="foot3 foot8">
-   <div class="foot">
-      <ul class="foot foot6">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Search</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Advertise</a></li>
-      </ul></div>
-      <div>
-      <a href="#"><img src="images/real2.png" alt="wali" class="ign" /></a></div>
-      <div class="foot">
-     <ul class="foot foot5">
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Google</a></li>
-      </ul></div>
+        <div class="foot">
+          <ul class="foot foot6">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Search</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Advertise</a></li>
+          </ul>
+        </div>
+        <div>
+          <a href="#"><img src="images/real2.png" alt="wali" class="ign" /></a>
+        </div>
+        <div class="foot">
+          <ul class="foot foot5">
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Google</a></li>
+          </ul>
+        </div>
       </div>
       <div class="md-level foot3">
         <div class="contacts">
@@ -299,7 +298,7 @@
               <span>Subscibe:</span> <br />
               <input type="email" name="email" id="email" class="send" required placeholder="your Email" /> </label
             ><br />
-            <input type="submit" name="" id="submit" value="send" class="send" />
+            <input type="submit" id="submit" value="send" class="send" />
           </form>
           <div class="about">
             contact
