--- a/detail.html
+++ b/detail.html
@@ -25,7 +25,7 @@
           <a href="#"> <i class="fas fa-rss ml-3" aria-hidden="true"></i> <span class="none">Blog</span> </a>
           <input type="checkbox" id="toggle" class="header__toggle" />
 
-          <label for="toggle" class="header__burger ml-3">
+          <label class="header__burger ml-3">
             <div class="header__burger-bar"></div>
             <div class="header__burger-bar"></div>
             <div class="header__burger-bar"></div>
@@ -40,19 +40,22 @@
           <label for="name"> FirstName* <br /><input type="text" name="first" id="name" placeholder="FirstName" /></label>
         </div>
         <div class="bio">
-          <label for="name">
+          <label for="first">
             lastName: <br />
-            <input type="text" name="first" id="name" placeholder="LastName"
+            <input type="text" name="first" id="first" placeholder="LastName"
           /></label>
         </div>
         <div class="bio">
-          <label for="email"> Email <br /> <input type="email" name="first" id="email" placeholder="Email" /></label>
+          <label for="email">
+            Email <br />
+            <input type="email" name="first" id="email" placeholder="Email"
+          /></label>
         </div>
         <div class="bio">
           <label for="user"> UserName* <br /><input type="text" name="user" id="user" placeholder="UserName" /></label>
         </div>
         <div class="bio">
-          <label for="user"> UserName* <br /><input type="text" name="first" id="user" placeholder="Username" /></label>
+          <label for="use"> UserName* <br /><input type="text" name="first" id="use" placeholder="Username" /></label>
         </div>
         <div class="bio">
           <label for="password"> Password <br /><input type="password" name="first" id="password" placeholder="Passowrd" /></label>
@@ -82,7 +85,9 @@
             <div class="price price-list">
               <p class="for">Type</p>
               <p class="for">State</p>
-              <p><span class=""> Amount : <span class="blue">₦ 1,300,000</span></span></p>
+              <p>
+                <span class=""> Amount : <span class="blue">₦ 1,300,000</span></span>
+              </p>
               <p>Location :<span class="blue">Abuja</span></p>
             </div>
             <div class="price">
@@ -92,70 +97,95 @@
                 <span class=""> Email:<span class="blue">adea@gamil.com</span> </span>
               </p>
 
-            <p>Gender: <span class="blue">FEMALE</span></p>
+              <p>Gender: <span class="blue">FEMALE</span></p>
             </div>
 
-          <button type="button" class="sub">Apply</button>
-          <div class="space">
-            <ul class="space1">
-              <li><span><a href="#"><i class="fas fa-bed blue" aria-hidden="true"></i></a>3 Bedrooms</li>
-              <li><span><a href="#"><i class="fas fa-bath blue" aria-hidden="true"></i></a></span>&nbsp; 4 Bathrooms</li>
-              <li><span><a href="#"><i class="fas fa-toilet blue" aria-hidden="true"></i></a></span></i>&nbsp;4 Toilets</li>
-              <li><span><a href="#"><i class="fas fa-car-side blue" aria-hidden="true"></i></a></span>&nbsp;9 Parking Spaces</li>
-            </ul>
+            <button type="button" class="sub">Apply</button>
+            <div class="space">
+              <ul class="space1">
+                <li>
+                  <span
+                    ><a href="#"><i class="fas fa-bed blue" aria-hidden="true"></i></a></span
+                  >&nbsp;3 Bedrooms
+                </li>
+                <li>
+                  <span
+                    ><a href="#"><i class="fas fa-bath blue" aria-hidden="true"></i></a></span
+                  >&nbsp; 4 Bathrooms
+                </li>
+                <li>
+                  <span
+                    ><a href="#"><i class="fas fa-toilet blue" aria-hidden="true"></i></a></span
+                  >&nbsp;4 Toilets
+                </li>
+                <li>
+                  <span
+                    ><a href="#"><i class="fas fa-car-side blue" aria-hidden="true"></i></a></span
+                  >&nbsp;9 Parking Spaces
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
       <section>
-        <p class="para-article">Nigeria Property Centre (NPC) is the clear leading property website with lots of users, advertising members and properties. Our advertisers are property professionals such as estate agents, letting
+        <p class="para-article">
+          Nigeria Property Centre (NPC) is the clear leading property website with lots of users, advertising members and properties. Our advertisers are property professionals such as estate agents,
+          letting (rental) agents, new homes developers and Nigerian private property owners who offer properties within Nigeria for property hunters.
+        </p>
+        <div class="click para-article">
+          <a href="#">CLICK HERE TO VIEW MORE DETAILS </a>
+        </div>
 
-          (rental) agents, new homes developers and Nigerian
-          private property owners who offer properties within
-           Nigeria for property hunters.</p>
-           <div class="click para-article">
-             <a href="#">CLICK HERE TO VIEW MORE DETAILS
-            </a>            </div>
+        <div class="map para-article">
+          © &nbsp; MAP DIRECTION
 
-            <div class="map para-article "> © &nbsp; MAP DIRECTION
-
-<div style="width: 100%"><iframe width="100%" height="600" frameborder="0"
-  scrolling="no" marginheight="0" marginwidth="0"
-  src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://www.maps.ie/route-planner.htm">
-    Driving Route Planner</a></div></div>
-
+          <div style="width: 100%">
+            <iframe
+              width="100%"
+              height="600"
+              frameborder="0"
+              scrolling="no"
+              marginheight="0"
+              marginwidth="0"
+              src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+            ></iframe
+            ><a href="https://www.maps.ie/route-planner.htm"> Driving Route Planner</a>
+          </div>
+        </div>
       </section>
-
-
-
     </main>
 
     <footer>
       <div class="foot3 foot8">
-   <div class="foot">
-      <ul class="foot foot6">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Search</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Advertise</a></li>
-      </ul></div>
-      <div>
-      <a href="#"><img src="images/real2.png" alt="wali" class="ign" /></a></div>
-      <div class="foot">
-     <ul class="foot foot5">
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Google</a></li>
-      </ul></div>
+        <div class="foot">
+          <ul class="foot foot6">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Search</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Advertise</a></li>
+          </ul>
+        </div>
+        <div>
+          <a href="#"><img src="images/real2.png" alt="wali" class="ign" /></a>
+        </div>
+        <div class="foot">
+          <ul class="foot foot5">
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Google</a></li>
+          </ul>
+        </div>
       </div>
       <div class="md-level foot3">
         <div class="contacts">
           <form class="subscribe">
-            <label for="email">
+            <label for="emai">
               <span>Subscibe:</span> <br />
-              <input type="email" name="email" id="email" class="send" required placeholder="your Email" /> </label
+              <input type="email" name="email" id="emai" class="send" required placeholder="your Email" /> </label
             ><br />
-            <input type="submit"  id="submit" value="send" class="send" />
+            <input type="submit" id="submit" value="send" class="send" />
           </form>
           <div class="about">
             contact
