--- a/detail.html
+++ b/detail.html
@@ -25,11 +25,11 @@
           <a href="#"> <i class="fas fa-rss ml-3" aria-hidden="true"></i> <span class="none">Blog</span> </a>
           <input type="checkbox" id="toggle" class="header__toggle" />
 
-          <label class="header__burger ml-3">
+          <div class="header__burger ml-3">
             <div class="header__burger-bar"></div>
             <div class="header__burger-bar"></div>
             <div class="header__burger-bar"></div>
-          </label>
+          </div>
           <span class="none">More</span>
         </div>
       </nav>
