--- a/detail.html
+++ b/detail.html
@@ -15,7 +15,7 @@
   <body>
     <header class="bg-gray">
       <nav class="flex head">
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
           <img src="https://images.nigeriapropertycentre.com/property-centre-logo.png" alt="Nigeria Property Centre" />
         </a>
 
@@ -30,7 +30,7 @@
             <div class="header__burger-bar"></div>
             <div class="header__burger-bar"></div>
           </div>
-          <span class="none">More</span>
+          <span class="none more">More</span>
         </div>
       </nav>
     </header>
@@ -76,11 +76,6 @@
           </h3>
         </div>
         <div class="lekki">
-          <div class="w">
-            <a href="#">
-              <!-- <img class="" src="images/lekki.jpg" alt="Summit Villa Hotel" /> -->
-            </a>
-          </div>
           <div class="cle">
             <div class="price price-list">
               <p class="for">Type</p>
@@ -99,7 +94,7 @@
 
               <p>Gender: <span class="blue">FEMALE</span></p>
             </div>
-
+          </div>
             <button type="button" class="sub">Apply</button>
             <div class="space">
               <ul class="space1">
@@ -142,12 +137,9 @@
 
           <div style="width: 100%">
             <iframe
-              width="100%"
-              height="600"
+
               frameborder="0"
               scrolling="no"
-              marginheight="0"
-              marginwidth="0"
               src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
             ></iframe
             ><a href="https://www.maps.ie/route-planner.htm"> Driving Route Planner</a>
@@ -190,12 +182,14 @@
           <div class="about">
             contact
             <p>+2348169258615</p>
-            adetonat@ymail.com
+            <span class="pink">adetonat@ymail.com</span>
           </div>
         </div>
         <div class="about">
           About us
-          <p>I am a graduate of university</p>
+
+          <P>Nigeria Property Centr is a leading property website in Nigeria with property in Nigeria
+          <span class="pink">commercial property</span>.</P>
         </div>
       </div>
     </footer>
