--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="bg-gray-">
       <nav class="flex head">
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
           <img src="https://images.nigeriapropertycentre.com/property-centre-logo.png" alt="Nigeria Property Centre" />
         </a>
 
@@ -30,29 +30,20 @@
             <div class="header__burger-bar"></div>
             <div class="header__burger-bar"></div>
           </div>
-          <span class="none">More</span>
+          <span class="none more">More</span>
         </div>
       </nav>
       <section class="rent">
-        <div class="">
+        <div class="wali">
           <div>
             <p class="note">Buying and selling couldn't be simpler than this.</p>
           </div>
           <form action="#" class="form">
-            <!-- <div class="f">
-              <select class="">
-                <option>House</option>
-                <option selected>Apartment</option>
-                <option>Loft house</option>
-                <option>Town house</option>
-              </select>
-            </div> -->
-
             <p class="key">Search by kEYWORDS</p>
             <div class="md-flex">
               <input type="text" placeholder="Search location..." class="form-input" />
 
-              <button type="submit" class="form-input int">Search</button>
+              <button type="submit" class="form-input int"><a href="search.html">Search</a></button>
             </div>
           </form>
           <div class="int-work">
@@ -76,27 +67,28 @@
           <img src="images/location.svg" alt="locate" />
           <h2>2. Locate</h2>
           <p class="para">
-            We have a total of 26,230 Property & Houses for rent in Lagos updated on 13 Dec 2020 . Among these properties are houses, lands, shops, apartments, flats and commercial spaces in Lagos.
-            Every Real Estate in Nigeria posted on this site is verified by real estate agents in Lagos. We also have cheap houses for rent in Lagos and cheap houses for sale in Lagos. Refine your
-            property search in Lagos by price, number of beds and type of property
+            You also need to take into consideration where the house is actually located. In this instance, there are a few things you should keep in mind as you conduct your search. If the house you
+            want to buy is right on a busy road or very near to a highway, you can probably get it for a lower price, but it will also be more difficult to sell later on. The same may hold true for
+            houses that stand next to or back onto commercial property, such as a grocery store or gas station, or houses on streets that get an unusual amount of parking traffic and parked cars, such
+            as those near large churches or community centers
           </p>
         </div>
         <div class="main-content">
           <img src="images/apply.svg" alt="apply" />
           <h2>1. Apply</h2>
           <p class="para">
-            We have a total of 26,230 Property & Houses for rent in Lagos updated on 13 Dec 2020 . Among these properties are houses, lands, shops, apartments, flats and commercial spaces in Lagos.
-            Every Real Estate in Nigeria posted on this site is verified by real estate agents in Lagos. We also have cheap houses for rent in Lagos and cheap houses for sale in Lagos. Refine your
-            property search in Lagos by price, number of beds and type of property
+            If you have found a property you would like to rent, the next step is to complete an application form. The application form is your way of showing the landlord and agent that you are the
+            best candidate for the property, that you are able to pay the rent and that you will look after the property as specified in the tenancy agreement. Your application is reviewed against all
+            the other applicants so making sure yours stands out is important.
           </p>
         </div>
         <div class="main-content">
           <img src="images/rest.svg" alt="reset" />
           <h2>1. Rest</h2>
           <p class="para">
-            We have a total of 26,230 Property & Houses for rent in Lagos updated on 13 Dec 2020 . Among these properties are houses, lands, shops, apartments, flats and commercial spaces in Lagos.
-            Every Real Estate in Nigeria posted on this site is verified by real estate agents in Lagos. We also have cheap houses for rent in Lagos and cheap houses for sale in Lagos. Refine your
-            property search in Lagos by price, number of beds and type of property
+            Our staff will contact you on the property choosen on futher enquires,Rental history is information on your past rental arrangements, which includes former addresses, late rent payments
+            and evictions, as well as criminal history, your credit score and other data to help a landlord judge whether or not you're a good fit as a tenant. This information is to renting what your
+            credit score is to getting a finance for a loan. If you have a good rental report you are more likely to be approved for a rental than if you have a poor rental history report.
           </p>
         </div>
       </section>
@@ -110,14 +102,14 @@
         </aside>
         <aside class="house-info1 info2">
           <div class="info-line">
-            <p>We have a total of 26,230 Property & Houses for rent in Lagos updated</p>
+            <p>We have a total of 26,230 Property & Houses for rent in Abuja updated</p>
             <button type="button" class="find">find a house</button>
           </div>
           <img src="images/tim.jpg" alt="cat" />
         </aside>
         <aside class="house-info1 info3">
           <div class="info-line">
-            <p>We have a total of 26,230 Property & Houses for rent in Lagos updated</p>
+            <p>We have do according to your taste and desire</p>
           </div>
           <img src="images/pacific-manor-2-1bed.jpg" alt="cat" />
         </aside>
@@ -148,12 +140,15 @@
           <div class="about">
             contact
             <p>+2348169258615</p>
-            adetonat@ymail.com
+            <span class="pink"> adetonat@ymail.com</span>
           </div>
         </div>
         <div class="about">
           About us
-          <p>I am a graduate of university</p>
+          <p>
+            Nigeria Property Centr is a leading property website in Nigeria with property in Nigeria
+            <span class="pink">commercial property</span>.
+          </p>
         </div>
       </div>
     </footer>
