--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
   <body>
     <header class="bg-gray">
       <nav class="flex head">
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
           <img src="https://images.nigeriapropertycentre.com/property-centre-logo.png" alt="Nigeria Property Centre" />
         </a>
 
@@ -25,12 +25,12 @@
           <a href="#"> <i class="fas fa-rss ml-3" aria-hidden="true"></i> <span class="none">Blog</span> </a>
           <input type="checkbox" id="toggle" class="header__toggle" />
 
-          <div  class="header__burger ml-3">
+          <div class="header__burger ml-3">
             <div class="header__burger-bar"></div>
             <div class="header__burger-bar"></div>
             <div class="header__burger-bar"></div>
           </div>
-          <span class="none">More</span>
+          <span class="none more">More</span>
         </div>
       </nav>
     </header>
@@ -107,7 +107,7 @@
               <div class="price">
                 <h4 class="for">House for rent</h4>
                 <p class="for">Standard 3 bedrooms apartment in life camp 1.3m inclusive of service charge and fee subsequent years you pay 1,050m</p>
-                <span class=""> <span content="NGN" class="price">₦</span><span content="1300000.00" class="price">1,300,000</span><span class="period"> per annum</span> </span>
+                <span class=""> <span content="NGN" class="price">₦</span><span content="00000.00" class="price">2,600,000</span><span class="period"> per annum</span> </span>
               </div>
             </div>
             <div class="space">
@@ -124,7 +124,7 @@
         <div class="lekki-house">
           <div class="lekk">
             <h3>
-              <a href="/"><span>Standard 3 Bedroom Apartment</span></a>
+              <a href="detail.html"><span>Standard 3 Bedroom Apartment</span></a>
             </h3>
           </div>
           <div class="lekki">
@@ -137,7 +137,7 @@
               <div class="price">
                 <h4 class="for">House for rent</h4>
                 <p class="for">Standard 3 bedrooms apartment in life camp 1.3m inclusive of service charge and fee subsequent years you pay 1,050m</p>
-                <span class=""> <span content="NGN" class="price">₦</span><span content="1300000.00" class="price">1,300,000</span><span class="period"> per annum</span> </span>
+                <span class=""> <span content="NGN" class="price">₦</span><span content="1300000.00" class="price">1,700,000</span><span class="period"> per annum</span> </span>
               </div>
             </div>
             <div class="space">
@@ -153,7 +153,7 @@
         <div class="lekki-house">
           <div class="lekk">
             <h3>
-              <a href="/"><span>Standard 3 Bedroom Apartment</span></a>
+              <a href="detail.html"><span>4 Bedroom Semi-Detached Duplex</span></a>
             </h3>
           </div>
           <div class="lekki">
@@ -166,7 +166,7 @@
               <div class="price">
                 <h4 class="for">House for rent</h4>
                 <p class="for">Standard 3 bedrooms apartment in life camp 1.3m inclusive of service charge and fee subsequent years you pay 1,050m</p>
-                <span class=""> <span content="NGN" class="price">₦</span><span content="1300000.00" class="price">1,300,000</span><span class="period"> per annum</span> </span>
+                <span class=""> <span content="NGN" class="price">₦</span><span content="1300000.00" class="price">1,400,000</span><span class="period"> per annum</span> </span>
               </div>
             </div>
             <div class="space">
@@ -182,7 +182,7 @@
         <div class="lekki-house">
           <div class="lekk">
             <h3>
-              <a href="#"><span>Standard 3 Bedroom Apartment</span></a>
+              <a href="detail.html"><span>4 bedroom terraced duplex for rent</span></a>
             </h3>
           </div>
           <div class="lekki">
@@ -195,7 +195,7 @@
               <div class="price">
                 <h4 class="for">House for rent</h4>
                 <p class="for">Standard 3 bedrooms apartment in life camp 1.3m inclusive of service charge and fee subsequent years you pay 1,050m</p>
-                <span class=""> <span content="NGN" class="price">₦</span><span content="1300000.00" class="price">1,300,000</span><span class="period"> per annum</span> </span>
+                <span class=""> <span content="NGN" class="price">₦</span><span content="1300000.00" class="price">2,300,000</span><span class="period"> per annum</span> </span>
               </div>
             </div>
             <div class="space">
@@ -211,7 +211,7 @@
         <div class="lekki-house">
           <div class="lekk">
             <h3>
-              <a href="#"><span>Standard 3 Bedroom Apartment</span></a>
+              <a href="detail.html"><span>6 Bedroom Fully Detached House </span></a>
             </h3>
           </div>
           <div class="lekki">
@@ -224,7 +224,7 @@
               <div class="price">
                 <h4 class="for">House for rent</h4>
                 <p class="for">Standard 3 bedrooms apartment in life camp 1.3m inclusive of service charge and fee subsequent years you pay 1,050m</p>
-                <span class=""> <span content="NGN" class="price">₦</span><span content="1300000.00" class="price">1,300,000</span><span class="period"> per annum</span> </span>
+                <span class=""> <span content="NGN" class="price">₦</span><span content="1300000.00" class="price">1,900,000</span><span class="period"> per annum</span> </span>
               </div>
             </div>
             <div class="space">
@@ -240,7 +240,7 @@
         <div class="lekki-house">
           <div class="lekk">
             <h3>
-              <a href="#"><span>Standard 3 Bedroom Apartment</span></a>
+              <a href="detail.html"><span>Standard 5 Bedroom Apartment</span></a>
             </h3>
           </div>
           <div class="lekki">
@@ -279,9 +279,7 @@
             <li><a href="#">Advertise</a></li>
           </ul>
         </div>
-        <div>
-          <a href="#"><img src="images/real2.png" alt="wali" class="ign" /></a>
-        </div>
+        <a href="#"><img src="images/real2.png" alt="wali" class="ign" /></a>
         <div class="foot">
           <ul class="foot foot5">
             <li><a href="#">Facebook</a></li>
@@ -303,12 +301,13 @@
           <div class="about">
             contact
             <p>+2348169258615</p>
-            adetonat@ymail.com
+            <span class="pink">adetonat@ymail.com</span>
           </div>
         </div>
         <div class="about">
           About us
-          <p>I am a graduate of university</p>
+
+          <p>Nigeria Property Centr is a leading property website in Nigeria with property in Nigeria <span class="pink">commercial property</span>.</p>
         </div>
       </div>
     </footer>
