--- a/detail.html
+++ b/detail.html
@@ -95,34 +95,34 @@
               <p>Gender: <span class="blue">FEMALE</span></p>
             </div>
           </div>
-            <button type="button" class="sub">Apply</button>
-            <div class="space">
-              <ul class="space1">
-                <li>
-                  <span
-                    ><a href="#"><i class="fas fa-bed blue" aria-hidden="true"></i></a></span
-                  >&nbsp;3 Bedrooms
-                </li>
-                <li>
-                  <span
-                    ><a href="#"><i class="fas fa-bath blue" aria-hidden="true"></i></a></span
-                  >&nbsp; 4 Bathrooms
-                </li>
-                <li>
-                  <span
-                    ><a href="#"><i class="fas fa-toilet blue" aria-hidden="true"></i></a></span
-                  >&nbsp;4 Toilets
-                </li>
-                <li>
-                  <span
-                    ><a href="#"><i class="fas fa-car-side blue" aria-hidden="true"></i></a></span
-                  >&nbsp;9 Parking Spaces
-                </li>
-              </ul>
-            </div>
+          <button type="button" class="sub">Apply</button>
+          <div class="space">
+            <ul class="space1">
+              <li>
+                <span
+                  ><a href="#"><i class="fas fa-bed blue" aria-hidden="true"></i></a></span
+                >&nbsp;3 Bedrooms
+              </li>
+              <li>
+                <span
+                  ><a href="#"><i class="fas fa-bath blue" aria-hidden="true"></i></a></span
+                >&nbsp; 4 Bathrooms
+              </li>
+              <li>
+                <span
+                  ><a href="#"><i class="fas fa-toilet blue" aria-hidden="true"></i></a></span
+                >&nbsp;4 Toilets
+              </li>
+              <li>
+                <span
+                  ><a href="#"><i class="fas fa-car-side blue" aria-hidden="true"></i></a></span
+                >&nbsp;9 Parking Spaces
+              </li>
+            </ul>
           </div>
         </div>
       </div>
+
       <section>
         <p class="para-article">
           Nigeria Property Centre (NPC) is the clear leading property website with lots of users, advertising members and properties. Our advertisers are property professionals such as estate agents,
@@ -137,9 +137,6 @@
 
           <div style="width: 100%">
             <iframe
-
-              frameborder="0"
-              scrolling="no"
               src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
             ></iframe
             ><a href="https://www.maps.ie/route-planner.htm"> Driving Route Planner</a>
@@ -188,8 +185,7 @@
         <div class="about">
           About us
 
-          <P>Nigeria Property Centr is a leading property website in Nigeria with property in Nigeria
-          <span class="pink">commercial property</span>.</P>
+          <p>Nigeria Property Centr is a leading property website in Nigeria with property in Nigeria <span class="pink">commercial property</span>.</p>
         </div>
       </div>
     </footer>
