--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="md-flex">
               <input type="text" placeholder="Search location..." class="form-input" />
 
-              <button type="submit" class="form-input int"><a href="search.html">Search</a></button>
+              <a href="search.html"><button type="submit" class="form-input int">Search</button></a>
             </div>
           </form>
           <div class="int-work">
