--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <p class="key">Search by kEYWORDS</p>
             <div class="md-flex">
               <input type="text" placeholder="Search location..." class="form-input" />
-
-              <a href="search.html"><button type="submit" class="form-input int">Search</button></a>
+              <a href="search.html"><input type="button" value="Search" class="form-input int" /></a>
+              <!-- <a href="search.html"><button type="submit" class="for?m-input int">Search</button></a> -->
             </div>
           </form>
           <div class="int-work">
