--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
           <div>
             <p class="note">Buying and selling couldn't be simpler than this.</p>
           </div>
-          <form action="#" class="form">
+          <form action="search.html" class="form">
             <p class="key">Search by kEYWORDS</p>
             <div class="md-flex">
               <input type="text" placeholder="Search location..." class="form-input" />
-              <a href="search.html"><input type="button" value="Search" class="form-input int" /></a>
-              <!-- <a href="search.html"><button type="submit" class="for?m-input int">Search</button></a> -->
+
+              <button type="submit" class="form-input int"><span class="se">Search</span></button>
             </div>
           </form>
           <div class="int-work">
