--- a/search.html
+++ b/search.html
@@ -94,7 +94,7 @@
         <div class="lekki-house">
           <div class="lekk">
             <h3>
-              <a href="/"><span>Standard 3 Bedroom Apartment</span></a>
+              <a href="detail.html"><span>Standard 3 Bedroom Apartment</span></a>
             </h3>
           </div>
           <div class="lekki">
